--- a/swimparser/package.json
+++ b/swimparser/package.json
@@ -9,8 +9,12 @@
   "author": "Raymond Camden",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "^0.22.0",
-    "mongodb": "^2.2.11",
-    "request": "^2.79.0"
+    "cheerio": "^1.0.0-rc.2",
+    "cheerio-tableparser": "^1.0.1",
+    "eyes": "^0.1.8",
+    "moment": "^2.18.1",
+    "mongodb": "^2.2.30",
+    "request": "^2.81.0",
+    "underscore": "^1.8.3"
   }
 }
